[package]
name = "bls-stylus-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Stylus bls signatures example"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.2.0"
wee_alloc = "0.4.5"
bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
pairing = "0.22"
sha2 = "0.9"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] } 
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
